syntax = "proto3";
package auth;

option go_package = "github.com/aldngrha/ecommerce-be/pb/auth";

import "common/base_response.proto";
import "buf/validate/validate.proto";

service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
}

message RegisterRequest {
  string full_name = 1 [(buf.validate.field).string = {
    min_len: 1,
    max_len: 100
  }];
  string email = 2 [(buf.validate.field).string = { email: true,
    min_len: 1,
    max_len: 100
  }];
  string password = 3 [(buf.validate.field).string = {
    min_len: 6,
    max_len: 100
  }];
  string confirm_password = 4 [(buf.validate.field).string = {
    min_len: 6,
    max_len: 100
  }];
}

message RegisterResponse {
  common.BaseResponse base = 1;
}

message LoginRequest {
  string email = 1 [(buf.validate.field).string = { email: true,
    min_len: 1,
    max_len: 100
  }];
  string password = 2 [(buf.validate.field).string = {
    min_len: 6,
    max_len: 100
  }];
}

message LoginResponse {
  common.BaseResponse base = 1;
  string access_token = 2;
}